<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/action_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_tv"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/action_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_more_details"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/action_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>