<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.moviefreak.SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/secactivitymovie_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/secactivitymovie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="205dp"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/secactivityposter_path"
                    android:layout_width="173dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="208dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="208dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/ratings"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_rating_icon" />

                    <TextView
                        android:id="@+id/secactivityrating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/releasedate"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/secactivityrelease_date"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="6dp"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/action_favorites"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/overview"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/secondactivityoverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/movietrailes_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/moviereview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews_tv"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>